# BenchCraft

./: .editorconfig  .gitignore  README.md  index.html  main-worker.html  main.go  main.html  main.js  main.py  makefile
Bench/: Bench.csproj  Program.cs
rust_benchmark/: Cargo.toml
rust_benchmark/src/: main.rs
